k8s/alumni-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: alumni-service
spec:
  selector:
    app: alumni-service
    color: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
