k8s/auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth-service
    color: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
