k8s/club-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: club-service
spec:
  selector:
    app: club-service
    color: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
