k8s/course-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: course-service
spec:
  selector:
    app: course-service
    color: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
