k8s/market-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: market-service
spec:
  selector:
    app: market-service
    color: blue
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
